--- a/MyApp/src/app/home/home.page.html
+++ b/MyApp/src/app/home/home.page.html
@@ -13,8 +13,10 @@
     <ion-button expand="full" shape="round"  (click)="lab2()">Lab2</ion-button>
     <ion-button expand="full" shape="round"  (click)="lab30()">Lab3.1</ion-button>
     <ion-button expand="full" shape="round"  (click)="lab31()">Lab3.2</ion-button>
-    <ion-button expand="full" shape="round"  (click)="lab4()">Lab4_Part1</ion-button>
-    <ion-button expand="full" shape="round"  (click)="lab42()">Lab4_Part2</ion-button>
+    <ion-button expand="full" shape="round"  (click)="lab4()">Lab4_Part1_ข้อ1</ion-button>
+    <ion-button expand="full" shape="round"  (click)="lab402()">Lab4_Part1_ข้อ2</ion-button>
+    <ion-button expand="full" shape="round"  (click)="lab42()">Lab4_Part2_ข้อ1</ion-button>
+    <ion-button expand="full" shape="round"  (click)="lab422()">Lab4_Part2_ข้อ2</ion-button>
     
   </div>
 </ion-content>
