--- a/MyApp/src/app/listviewp1/listviewp1.page.html
+++ b/MyApp/src/app/listviewp1/listviewp1.page.html
@@ -11,12 +11,12 @@
       <ion-icon name="{{item.icon}}"></ion-icon>
     </ion-item>  
   </!--> 
-  <ion-item-sliding *ngFor="let item of itemlist">
+  <ion-item-sliding *ngFor="let item ;let i = index of itemlist">
     <ion-item>{{item.country}}</ion-item>
     <ion-item-options>
       <ion-button color="danger" ion-button expandable (click)="delete(item)">Delete</ion-button>
-      <ion-button ion-button expandable (click)="add(item)">Add</ion-button>
-      <ion-button ion-button expandable (click)="edit(item)">Edit</ion-button>
+      <ion-button ion-button expandable (click)="add(i)">Add</ion-button>
+      <ion-button ion-button expandable (click)="edit(i)">Edit</ion-button>
     </ion-item-options>
   </ion-item-sliding>
 
