--- a/MyApp/src/app/lab4002/lab4002.page.html
+++ b/MyApp/src/app/lab4002/lab4002.page.html
@@ -17,9 +17,9 @@
     </ion-item>
       <ion-button expand="full" shape="round"  (click)="Buy()">Buy</ion-button>
   </ion-list>
-  <ion-card text-center style="height: 50px; font-size: 20px;"> 
+  <!-- <ion-card text-center style="height: 50px; font-size: 20px;"> 
       จำนวนสินค้า: {{this.c}} <br>
       ราคา {{this.price}} บาท 
-  </ion-card>
+  </ion-card> -->
   <ion-button expand="full" shape="round"  (click)="bb()">กลับ</ion-button>
 </ion-content>
