--- a/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
+++ b/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
@@ -49,6 +49,7 @@
               <p>
                 {{item.myplace}} <br>
                 {{item.mydate.toDate() | date}}
+                <!-- {{item.mydate}} -->
             </p>
             </ion-label>
           </ion-item>
