--- a/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
+++ b/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
@@ -8,7 +8,7 @@
     <ion-list-header>
         CRUD APPs: Connecting to Firebase
     </ion-list-header>
-    <ion-list>
+    <ion-list *ngFor="let item of tasklist;">
     <ion-grid fixed>
         <ion-row>
           <ion-col>
@@ -39,7 +39,7 @@
         </span>
           <ng-template #editBlock>
             <ion-col class="ion-text-center">
-              <ion-button (click)="UpdateRecord()"
+              <ion-button (click)="updateRecord(item.id)"
                 [disabled]="!tmptitle || !tmpplace || !tmpdate">
                 <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
                 &nbsp;Update Data
@@ -58,7 +58,7 @@
       </ion-grid>
   
   <!-- ----------------------- show data --------------- -->
-      <ion-item-sliding *ngFor="let item of tasklist;">
+      <ion-item-sliding>
           <ion-item>
             <ion-label>
               <h2>
