--- a/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
+++ b/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
@@ -5,83 +5,101 @@
 </ion-header>
 
 <ion-content>
-    <ion-list-header>
-        CRUD APPs: Connecting to Firebase
-    </ion-list-header>
-    <ion-list *ngFor="let item of tasklist;">
-    <ion-grid fixed>
+  <ion-list-header>
+    CRUD APPs: Connecting to Firebase
+  </ion-list-header>
+  <ion-list *ngFor="let item of tasklist; let i = index;">
+    <span *ngIf="i == 0">
+      <ion-grid fixed>
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-input value="{{editRecord['title']}}" placeholder="Title" [(ngModel)] = "tmptitle"></ion-input>
+              <ion-input
+                value="{{editRecord['title']}}"
+                placeholder="Title"
+                [(ngModel)]="tmptitle"
+              ></ion-input>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item>
-              <ion-input value="{{editRecord['place']}}" placeholder="Place" [(ngModel)]="tmpplace"></ion-input>
+              <ion-input
+                value="{{editRecord['place']}}"
+                placeholder="Place"
+                [(ngModel)]="tmpplace"
+              ></ion-input>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item>
-          <ion-datetime placeholder="Choose date" value="{{editRecord['tododate']}}"
-          display-format="DD MMM YYYY" [(ngModel)]="tmpdate"></ion-datetime>
+              <ion-datetime
+                placeholder="Choose date"
+                value="{{editRecord['tododate']}}"
+                display-format="DD MMM YYYY"
+                [(ngModel)]="tmpdate"
+              ></ion-datetime>
             </ion-item>
           </ion-col>
 
-          <span *ngIf = "!this.isEdit; else editBlock">
-          <ion-col class="ion-text-center">
-            <ion-button (click)="createRecord()"
-              [disabled]="!tmptitle || !tmpplace || !tmpdate">
-              <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
-              &nbsp;Create Data
-          </ion-button>
-          </ion-col>
-        </span>
+          <span *ngIf="!this.isEdit; else editBlock">
+            <ion-col class="ion-text-center">
+              <ion-button
+                (click)="createRecord()"
+                [disabled]="!tmptitle || !tmpplace || !tmpdate"
+              >
+                <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
+                &nbsp;Create Data
+              </ion-button>
+            </ion-col>
+          </span>
+
           <ng-template #editBlock>
             <ion-col class="ion-text-center">
-              <ion-button (click)="updateRecord(item.id)"
-                [disabled]="!tmptitle || !tmpplace || !tmpdate">
+              <ion-button
+                (click)="updateRecord(item.id)"
+                [disabled]="!tmptitle || !tmpplace || !tmpdate"
+              >
                 <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
                 &nbsp;Update Data
-            </ion-button>
+              </ion-button>
             </ion-col>
+
             <!-- home -->
+            
             <ion-col class="ion-text-center">
               <ion-button (click)="home()">
                 <ion-icon size="small" slot="icon-only" name="home"></ion-icon>
                 &nbsp;Home
-            </ion-button>
+              </ion-button>
             </ion-col>
           </ng-template>
-          
         </ion-row>
       </ion-grid>
-  
-  <!-- ----------------------- show data --------------- -->
-      <ion-item-sliding>
-          <ion-item>
-            <ion-label>
-              <h2>
-                {{item.mytitle}}
-              </h2>
-              <p>
-                {{item.myplace}} <br>
-                {{item.mydate.toDate() | date}}
-                <!-- {{item.mydate}} -->
-            </p>
-            </ion-label>
-          </ion-item>
-      
-          <ion-item-options>
-              
-            <ion-button color="primary" (click)="editdata(item)"> 
-              <ion-icon name="create" ></ion-icon>
-            </ion-button>
-            <ion-button color="danger" (click)="removedata(item.id)">
-              <ion-icon name="trash"></ion-icon>
-            </ion-button>
-          </ion-item-options>
-        </ion-item-sliding>
-      
-      </ion-list>
+    </span>
+
+    <!-- ----------------------- show data --------------- -->
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>
+          <h2>
+            {{item.mytitle}}
+          </h2>
+          <p>
+            {{item.myplace}} <br />
+            {{item.mydate.toDate() | date}}
+            <!-- {{item.mydate}} -->
+          </p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options>
+        <ion-button color="primary" (click)="editdata(item)">
+          <ion-icon name="create"></ion-icon>
+        </ion-button>
+        <ion-button color="danger" (click)="removedata(item.id)">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
