Update Index Firebase

--- a/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
+++ b/Lab7_Firebase/src/app/lab7-part2/lab7-part2.page.html
@@ -8,8 +8,7 @@
   <ion-list-header>
     CRUD APPs: Connecting to Firebase
   </ion-list-header>
-  <ion-list *ngFor="let item of tasklist; let i = index;">
-    <span *ngIf="i == 0">
+  <ion-list>
       <ion-grid fixed>
         <ion-row>
           <ion-col>
@@ -56,7 +55,7 @@
           <ng-template #editBlock>
             <ion-col class="ion-text-center">
               <ion-button
-                (click)="updateRecord(item.id)"
+                (click)="updateRecord()"
                 [disabled]="!tmptitle || !tmpplace || !tmpdate"
               >
                 <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
@@ -75,10 +74,9 @@
           </ng-template>
         </ion-row>
       </ion-grid>
-    </span>
 
     <!-- ----------------------- show data --------------- -->
-    <ion-item-sliding>
+    <ion-item-sliding *ngFor="let item of tasklist;">
       <ion-item>
         <ion-label>
           <h2>
