--- a/MyApp/src/app/listviewp1/listviewp1.page.html
+++ b/MyApp/src/app/listviewp1/listviewp1.page.html
@@ -15,7 +15,7 @@
     <ion-item>{{item.country}}</ion-item>
     <ion-item-options>
       <ion-button color="danger" ion-button expandable (click)="delete(item)">Delete</ion-button>
-      <ion-button ion-button expandable (click)="add(i)">Add</ion-button>
+      <!-- <ion-button ion-button expandable (click)="add(i)">Add</ion-button> -->
       <ion-button ion-button expandable (click)="edit(i)">Edit</ion-button>
     </ion-item-options>
   </ion-item-sliding>
